--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <p id="currentDay" class="lead"></p>
   </header>
   <div class="container"></div>
+  <script src="https://kit.fontawesome.com/f70a72fba8.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="day-calender.js"></script>
